[profile.release]
debug = true

[workspace.dependencies]
anyhow = "1.0.71"
dominator = "0.5.28"
futures-signals = "0.3.31"
tokio = "1.29.1"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = ["DocumentFragment", "Storage", "Url", "console", "Window", "Request", "Response", "RequestInit", "SvgAnimationElement"] }

[workspace]

members = [
    "crates/dmat-components",
    "crates/dmat-components-style",
    "crates/dmat-vis",
    "crates/dmat-utils",
    "crates/dominator-testing",
    "crates/dominator-component-macros",
    "crates/futures-signals-utils",
    "crates/futures-signals-utils-derive",
    "examples/component_showcase",
    "tutorial/examples/hello_world",
    "tutorial/examples/lightweight_dmat",
]
