[package]
name = "dmat-components"
version = "0.1.0"
authors = ["Mathias Myrland <jedimemo@gmail.com>"]
edition = "2018"
license-file = "LICENSE.md"
repository = "https://github.com/JedimEmO/dmat"
description = "Collection of material components to use with the dominator rust library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dmat-utils = { path = "../dmat-utils"}
dominator = "0.5.23"
futures = "0.3.19"
futures-signals = "0.3.15"
futures-util = "0.3.19"
pin-project = "1.0.10"
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { version = "0.3.55", features = ["console", "Document", "DomRect", "HtmlDocument", "HtmlCollection", "HtmlButtonElement", "EventTarget", "HtmlSelectElement", "Element", "Window"] }

[dev-dependencies]
dominator-testing = { path = "../dominator-testing" }
tokio = { version = "1.14.0", features = ["macros", "rt"] }
wasm-bindgen-test = "0.3.28"
