[package]
name = "dmat-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dominator = { workspace = true }
futures-signals = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
wasm-timer = "0.2.5"
