[package]
name = "dominator-component-macros-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dominator-component-macros = { path = "../dominator-component-macros" }

[dev-dependencies]

futures-signals = { workspace = true }
dominator = { workspace = true }
web-sys = { workspace = true }