[package]
name = "dominator-component-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
syn = { version = "2.0.23", features = ["full"] }
quote = "1.0.29"
