[package]
name = "dominator-component-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[[test]]
name = "dominator-component-macros-test"
path = "tests/test.rs"

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "^1.0.63"
syn = { version = "^2.0.22", features = ["full"] }
quote = "^1.0.29"

[dev-dependencies]
dominator = { workspace = true }
dominator-testing = { path = "../dominator-testing" }
futures-signals = { workspace = true }
wasm-bindgen-test = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }