[package]
name = "dominator-material-style"
version = "0.1.0"
edition = "2021"
authors = ["Mathias Myrland <jedimemo@gmail.com>"]
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "6.3.0"

[dev-dependencies]
grass = "0.10.8"
