[package]
name = "futures-signals-utils-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "futures-signals-utils-derive-test"
path = "tests/test.rs"

[[test]]
name = "futures-signals-utils-derive-test-event-sourced"
path = "tests/test_event_sourced.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
convert_case = "0.6.0"
futures-signals = { wokspace = true }
futures-signals-utils = { path = "../futures-signals-utils" }
proc-macro2 = "^1.0.63"
syn = { version = "^2.0.22", features = ["full"] }
quote = "^1.0.29"

[dev-dependencies]
dominator-testing = { path = "../dominator-testing" }
wasm-bindgen-test = { workspace = true }
wasm-bindgen-futures = { workspace = true }