[package]
name = "dominator-material-component-showcase"
version = "0.1.0"
authors = ["Mathias Myrland <jedimemo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = "0.5.23"
dominator-material = { path = "../../crates/dominator-material" }
futures = "0.3.19"
futures-signals = "0.3.15"
js-sys = "0.3.44"
lipsum = "0.8.0"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = ["DocumentFragment", "Storage", "Url", "console", "Window", "Request", "Response", "RequestInit"] }
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }

[build-dependencies]
dominator-material-style = { path = "../../crates/dominator-material-style"}
