[package]
name = "dmat-showcase"
version = "0.1.0"
authors = ["Mathias Myrland <jedimemo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = { workspace = true }
dmat-components = { path = "../../crates/dmat-components" }
dmat-vis = { path = "../../crates/dmat-vis" }
futures = "0.3.19"
futures-signals = "0.3.15"
js-sys = "0.3.44"
lipsum = "0.8.0"
log = { workspace = true }
rand = "0.8.5"
wasm-bindgen = { workspace = true }
wasm-timer = "0.2.5"
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }
web-sys = { workspace = true }
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }

[build-dependencies]
dmat-components-style = { path = "../../crates/dmat-components-style" }

# https://github.com/Amanieu/parking_lot/issues/269
[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot_core = "=0.8.0"
