[package]
name = "hello_world_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = { workspace = true }
futures-signals = { workspace = true }
wasm-bindgen = { workspace = true }
